--- a/.github/workflows/snowflake-devops-demo.yml
+++ b/.github/workflows/snowflake-devops-demo.yml
@@ -12,24 +12,26 @@ jobs:
   runs-on: ubuntu-latest
 
 steps:
-  -name : Checkout reposetory
-  uses : actions/checkout@v2
+  -name: Checkout reposetory
+  uses: actions/checkout@v2
    
-   -name : Use Python 3.8.x
-   uses  : actions/setup-python@v2.2.1
-  with :
-  Python version 3.8.x
- -name : Run schemachange
-  env :
+   -name:Use Python 3.8.X
+uses: actions/setup-python@v2.2.1
+ with 
+    Python version:3.8.x
+-name: Run Schemachange
+env:   
    SF_ACCOUNT: ${{ secrets.SF_ACCOUNT }}
    SF_USERNAME: ${{ secrets.SF_USERNAME }}
    SF-WAREHOUSE: ${{secrets.SF_WAREHOUSE}}
    SF_DATABASE: ${{secrets.SF_DATABASE}}
    SNOWFLAKE_PASSWORD: ${{ secrets.SF_PASSWORD }}
- run:
+run:
    echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
- python --version 
- echo "step 1: Installing schemachange "
+
+Python --version 
+
+ echo "Step 1 Installing schemachange"
  pip install schemachange
  
  echo "step 2: Running schemachange"
