--- a/.github/workflows/snowflake-devops-demo.yml
+++ b/.github/workflows/snowflake-devops-demo.yml
@@ -14,28 +14,26 @@ jobs:
 steps:
   -name: Checkout reposetory
   uses: actions/checkout@v2
-   
-   -name:Use Python 3.8.X
-uses: actions/setup-python@v2.2.1
+-name:Use Python 3.8.X
+
+uses:  actions/setup-python@v2.2.1
  with 
-    Python version:3.8.x
--name: Run Schemachange
+    Python version:3.8.X
+ -name: Run Schemachange
 env:   
    SF_ACCOUNT: ${{ secrets.SF_ACCOUNT }}
    SF_USERNAME: ${{ secrets.SF_USERNAME }}
    SF-WAREHOUSE: ${{secrets.SF_WAREHOUSE}}
    SF_DATABASE: ${{secrets.SF_DATABASE}}
    SNOWFLAKE_PASSWORD: ${{ secrets.SF_PASSWORD }}
-run:
+   
+   run: |
    echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
-
-Python --version 
-
- echo "Step 1 Installing schemachange"
- pip install schemachange
- 
- echo "step 2: Running schemachange"
- schemachange -f $GITHUB_WORKSPACE/migrations -a $SF_ACCOUNT -u $SF_USERNAME -r $SF_ROLE -w $SF_WAREHOUSE -d $SF_DATABASE -c $SF_DATABASE.SCHEMACHANGE.CHANGE_HISTORY  --create-change-history-table                          
+    Python --version 
+    echo "Step 1 Installing schemachange"
+    pip install schemachange
+   echo "step 2: Running schemachange"
+    schemachange -f $GITHUB_WORKSPACE/migrations -a $SF_ACCOUNT -u $SF_USERNAME -r $SF_ROLE -w $SF_WAREHOUSE -d $SF_DATABASE -c $SF_DATABASE.SCHEMACHANGE.CHANGE_HISTORY  --create-change-history-table                          
    
   
   
