--- a/.github/workflows/snowflake-devops-demo.yml
+++ b/.github/workflows/snowflake-devops-demo.yml
@@ -6,9 +6,9 @@ on:
     branches:
       - main
     paths:
-      - 'migrations/**'
+      - $(Build.SourceDirectory)
 
-      
+
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
