--- a/.github/workflows/snowflake-devops-demo.yml
+++ b/.github/workflows/snowflake-devops-demo.yml
@@ -6,7 +6,7 @@ on:
     branches:
       - main
     paths:
-      - $-demo_repo/.github
+      - $ "GITHUB_WORKSPACE"
 
 
 
@@ -42,4 +42,4 @@ jobs:
           pip install schemachange
           
           echo "Step 2: Running schemachange"
-          schemachange -f $-demo_repo/.github -a $SF_ACCOUNT -u $SF_USERNAME -r $SF_ROLE -w $SF_WAREHOUSE -d $SF_DATABASE -c $SF_DATABASE.SCHEMACHANGE.CHANGE_HISTORY --create-change-history-table
+          schemachange -f $GITHUB_WORKSPACE  -a $SF_ACCOUNT -u $SF_USERNAME -r $SF_ROLE -w $SF_WAREHOUSE -d $SF_DATABASE -c $SF_DATABASE.SCHEMACHANGE.CHANGE_HISTORY --create-change-history-table
